# rust-slack-profile-update-scheduler

./: .gitignore  Cargo.toml  README.md
src/: main.rs
