[package]
name = "rust-slack-profile-update-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
job_scheduler = "1.2.1"
rand = "0.8.4"
rayon = "1.5.1"
chrono = "0.4"

[features]
